Address class cleanup/improvements
* Move most definitions to implementation file to avoid recompiling whole program for small changes
* Pass strings by reference for where possible.
* Split Module class to dedicated file.
* Add const qualifiers to all eligible methods for address/module class
* Some renaming

--- a/r5dev/vproj/clientsdk.vcxproj
+++ b/r5dev/vproj/clientsdk.vcxproj
@@ -65,6 +65,8 @@
     </ClCompile>
     <ClCompile Include="..\public\bansystem.cpp" />
     <ClCompile Include="..\public\binstream.cpp" />
+    <ClCompile Include="..\public\memaddr.cpp" />
+    <ClCompile Include="..\public\module.cpp" />
     <ClCompile Include="..\public\utility.cpp" />
     <ClCompile Include="..\rtech\rtech_utils.cpp" />
     <ClCompile Include="..\rtech\rtech_game.cpp" />
@@ -111,7 +113,8 @@
     <ClInclude Include="..\common\opcodes.h" />
     <ClInclude Include="..\common\protocol.h" />
     <ClInclude Include="..\common\pseudodefs.h" />
-    <ClInclude Include="..\common\sdktypes.h" />
+    <ClInclude Include="..\common\sdkdefs.h" />
+    <ClInclude Include="..\common\x86defs.h" />
     <ClInclude Include="..\core\assert.h" />
     <ClInclude Include="..\core\init.h" />
     <ClInclude Include="..\core\logdef.h" />
@@ -172,6 +175,7 @@
     <ClInclude Include="..\public\include\binstream.h" />
     <ClInclude Include="..\public\include\httplib.h" />
     <ClInclude Include="..\public\include\json.hpp" />
+    <ClInclude Include="..\public\include\module.h" />
     <ClInclude Include="..\public\include\stb_image.h" />
     <ClInclude Include="..\public\include\utility.h" />
     <ClInclude Include="..\core\resource.h" />
