--- a/r5dev/vproj/clientsdk.vcxproj.filters
+++ b/r5dev/vproj/clientsdk.vcxproj.filters
@@ -408,6 +408,12 @@
     <ClCompile Include="..\vstdlib\keyvaluessystem.cpp">
       <Filter>sdk\vstdlib</Filter>
     </ClCompile>
+    <ClCompile Include="..\public\memaddr.cpp">
+      <Filter>sdk\public</Filter>
+    </ClCompile>
+    <ClCompile Include="..\public\module.cpp">
+      <Filter>sdk\public</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\client\cdll_engine_int.h">
@@ -1145,9 +1151,6 @@
     <ClInclude Include="..\filesystem\basefilesystem.h">
       <Filter>sdk\filesystem</Filter>
     </ClInclude>
-    <ClInclude Include="..\common\sdktypes.h">
-      <Filter>sdk\common</Filter>
-    </ClInclude>
     <ClInclude Include="..\tier1\IConVar.h">
       <Filter>sdk\tier1</Filter>
     </ClInclude>
@@ -1162,6 +1165,15 @@
     </ClInclude>
     <ClInclude Include="..\vstdlib\keyvaluessystem.h">
       <Filter>sdk\vstdlib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\include\module.h">
+      <Filter>sdk\public\include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\common\x86defs.h">
+      <Filter>sdk\common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\common\sdkdefs.h">
+      <Filter>sdk\common</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
