Un-hardcode all CHostState dependencies
The SDK now works on executables with ASLR enabled.
!TODO: Dedicated.

--- a/r5dev/vproj/dedicated.vcxproj.filters
+++ b/r5dev/vproj/dedicated.vcxproj.filters
@@ -849,6 +849,9 @@
     <ClInclude Include="..\common\sdkdefs.h">
       <Filter>sdk\common</Filter>
     </ClInclude>
+    <ClInclude Include="..\engine\host.h">
+      <Filter>sdk\engine</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\common\opcodes.cpp">
