--- a/r5dev/vproj/gamesdk.vcxproj.filters
+++ b/r5dev/vproj/gamesdk.vcxproj.filters
@@ -444,6 +444,9 @@
     <ClCompile Include="..\public\module.cpp">
       <Filter>sdk\public</Filter>
     </ClCompile>
+    <ClCompile Include="..\vstdlib\callback.cpp">
+      <Filter>sdk\vstdlib</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\client\cdll_engine_int.h">
@@ -1240,6 +1243,12 @@
     </ClInclude>
     <ClInclude Include="..\engine\host.h">
       <Filter>sdk\engine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\client\client.h">
+      <Filter>sdk\client</Filter>
+    </ClInclude>
+    <ClInclude Include="..\vstdlib\callback.h">
+      <Filter>sdk\vstdlib</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
