--- a/r5dev/vproj/gamesdk.vcxproj.filters
+++ b/r5dev/vproj/gamesdk.vcxproj.filters
@@ -447,6 +447,9 @@
     <ClCompile Include="..\vstdlib\callback.cpp">
       <Filter>sdk\vstdlib</Filter>
     </ClCompile>
+    <ClCompile Include="..\launcher\launcher.cpp">
+      <Filter>sdk\launcher</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\client\cdll_engine_int.h">
@@ -1252,6 +1255,9 @@
     </ClInclude>
     <ClInclude Include="..\tier0\tslist.h">
       <Filter>sdk\tier0</Filter>
+    </ClInclude>
+    <ClInclude Include="..\launcher\launcher.h">
+      <Filter>sdk\launcher</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
