Update config files

--- a/r5dev/resource/cfg/startup_dedi_debug.cfg
+++ b/r5dev/resource/cfg/startup_dedi_debug.cfg
@@ -1,24 +1,8 @@
 -ansiclr
--sw
--lv
 -notimeout
 -dev
 -devsdk
--fnf
--safe
--high
--rerun
--collate
 -tools
--multiple
--noorigin
--novid
--noshaderapi
--nosound
--nojoy
--gamepad_ignore_local
--nomouse
--nomenuvid
--nosendtable
 -playlistfile "playlists_r5_patch.txt"
++launchplaylist "dev_default"
 +map "mp_rr_canyonlands_staging"
