Remove extraneous '/arch:AVX2' compiler flag
The game doesn't require a CPU with AVX2 instructions, our SDK did because of a mistake (I left this compiler flag in after debugging the SDK, and never removed it).

Bit shift operations use the SHLX instructions instead of the widely supported SHL instructions when this flag is issued.

--- a/r5dev/vproj/gamesdk.vcxproj
+++ b/r5dev/vproj/gamesdk.vcxproj
@@ -500,7 +500,7 @@
       <CreateHotpatchableImage>
       </CreateHotpatchableImage>
       <WholeProgramOptimization>true</WholeProgramOptimization>
-      <AdditionalOptions>/D GAMESDK /D _CRT_SECURE_NO_WARNINGS /arch:AVX2 %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>/D GAMESDK /D _CRT_SECURE_NO_WARNINGS %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
