--- a/r5dev/vproj/gamesdk.vcxproj.filters
+++ b/r5dev/vproj/gamesdk.vcxproj.filters
@@ -450,6 +450,9 @@
     <ClCompile Include="..\launcher\launcher.cpp">
       <Filter>sdk\launcher</Filter>
     </ClCompile>
+    <ClCompile Include="..\tier0\jobthread.cpp">
+      <Filter>sdk\tier0</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\client\cdll_engine_int.h">
@@ -1258,6 +1261,9 @@
     </ClInclude>
     <ClInclude Include="..\launcher\launcher.h">
       <Filter>sdk\launcher</Filter>
+    </ClInclude>
+    <ClInclude Include="..\tier0\jobthread.h">
+      <Filter>sdk\tier0</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
