--- a/r5dev/vproj/clientsdk.vcxproj
+++ b/r5dev/vproj/clientsdk.vcxproj
@@ -103,6 +103,7 @@
     <ClCompile Include="..\windows\console.cpp" />
     <ClCompile Include="..\windows\id3dx.cpp" />
     <ClCompile Include="..\windows\input.cpp" />
+    <ClCompile Include="..\windows\resource.cpp" />
     <ClCompile Include="..\windows\system.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -364,6 +365,7 @@
     <ClInclude Include="..\windows\console.h" />
     <ClInclude Include="..\windows\id3dx.h" />
     <ClInclude Include="..\windows\input.h" />
+    <ClInclude Include="..\windows\resource.h" />
     <ClInclude Include="..\windows\system.h" />
   </ItemGroup>
   <ItemGroup>
