Start or 'mdl/error.rmdl' fallback implementation (see description)
In 'datacache/mdlcache.cpp' the function 'CMDLCache::FindMDL' attempts to find 'mdl/error.rmdl' and assigns the studiohdr and handle to the members of CMDLFallback.

In 'CMDLCache::FindUncachedMDL' we check if a model exists, if a model does not exist, we replace the studiohdr with the one of error.rmdl we stored in the CMDLFallback structure.

This does actually work (on the dedicated server it doesn't crash at all!), but on the client it crashes when trying to gather props (right before rendering), setting the ConVar* 'old_gather_props' does interesting things (check IDA around this ConVar*). setting this to 1 causes it to crash in another CMDLCache method when trying to deref something in the global cache pool.

This method is easy to rebuild. I will do this soon and attempt to return error.rmdl parts from here as well if results are null (this might actually just work).

Leaving 'old_gather_props' to 0 causes it to crash in the middle of the function which is supposed to gather the props the 'new' way.

The gather props functions are kind of daunting

NOTE: Currently only confirmed to work somewhat properly on the dedicated server for prop_static. prop_dynamic is unconfirmed. And (almost?) works on the client.

--- a/r5dev/vproj/clientsdk.vcxproj.filters
+++ b/r5dev/vproj/clientsdk.vcxproj.filters
@@ -169,6 +169,12 @@
     <Filter Include="sdk\vstdlib">
       <UniqueIdentifier>{fd290792-d36d-400c-9f4d-366a9ce57427}</UniqueIdentifier>
     </Filter>
+    <Filter Include="sdk\datacache">
+      <UniqueIdentifier>{99b7722c-1c10-431d-b86d-bc4d03655aee}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sdk\public\avi">
+      <UniqueIdentifier>{05663bd0-2f29-41e4-acd3-4e3580f16549}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\client\cdll_engine_int.cpp">
@@ -428,6 +434,12 @@
     </ClCompile>
     <ClCompile Include="..\common\netmessages.cpp">
       <Filter>sdk\common</Filter>
+    </ClCompile>
+    <ClCompile Include="..\datacache\mdlcache.cpp">
+      <Filter>sdk\datacache</Filter>
+    </ClCompile>
+    <ClCompile Include="..\game\client\spritemodel.cpp">
+      <Filter>sdk\game\client</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1210,6 +1222,39 @@
     </ClInclude>
     <ClInclude Include="..\windows\resource.h">
       <Filter>windows</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\include\studio.h">
+      <Filter>sdk\public\include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\engine\gl_model_private.h">
+      <Filter>sdk\engine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\common\qlimits.h">
+      <Filter>sdk\common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\include\model_types.h">
+      <Filter>sdk\public\include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\game\client\enginesprite.h">
+      <Filter>sdk\game\client</Filter>
+    </ClInclude>
+    <ClInclude Include="..\datacache\imdlcache.h">
+      <Filter>sdk\datacache</Filter>
+    </ClInclude>
+    <ClInclude Include="..\datacache\mdlcache.h">
+      <Filter>sdk\datacache</Filter>
+    </ClInclude>
+    <ClInclude Include="..\game\client\hud.h">
+      <Filter>sdk\game\client</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\avi\iavi.h">
+      <Filter>sdk\public\avi</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\avi\ibik.h">
+      <Filter>sdk\public\avi</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\include\const.h">
+      <Filter>sdk\public\include</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
