--- a/r5dev/vproj/gamesdk.vcxproj.filters
+++ b/r5dev/vproj/gamesdk.vcxproj.filters
@@ -175,6 +175,12 @@
     <Filter Include="sdk\vstdlib">
       <UniqueIdentifier>{48abe326-8ad7-43fa-875d-2e73c7c64106}</UniqueIdentifier>
     </Filter>
+    <Filter Include="sdk\datacache">
+      <UniqueIdentifier>{42f3eba8-1c16-4a48-b9c7-209eb4e0eb36}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sdk\public\avi">
+      <UniqueIdentifier>{67444ecb-b115-4231-a33b-aab424f785fc}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\client\vengineclient_impl.cpp">
@@ -458,6 +464,12 @@
     </ClCompile>
     <ClCompile Include="..\common\netmessages.cpp">
       <Filter>sdk\common</Filter>
+    </ClCompile>
+    <ClCompile Include="..\datacache\mdlcache.cpp">
+      <Filter>sdk\datacache</Filter>
+    </ClCompile>
+    <ClCompile Include="..\game\client\spritemodel.cpp">
+      <Filter>sdk\game\client</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1270,6 +1282,39 @@
     </ClInclude>
     <ClInclude Include="..\windows\resource.h">
       <Filter>windows</Filter>
+    </ClInclude>
+    <ClInclude Include="..\datacache\mdlcache.h">
+      <Filter>sdk\datacache</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\include\studio.h">
+      <Filter>sdk\public\include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\engine\gl_model_private.h">
+      <Filter>sdk\engine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\common\qlimits.h">
+      <Filter>sdk\common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\include\model_types.h">
+      <Filter>sdk\public\include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\datacache\imdlcache.h">
+      <Filter>sdk\datacache</Filter>
+    </ClInclude>
+    <ClInclude Include="..\game\client\enginesprite.h">
+      <Filter>sdk\game\client</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\include\const.h">
+      <Filter>sdk\public\include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\avi\ibik.h">
+      <Filter>sdk\public\avi</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\avi\iavi.h">
+      <Filter>sdk\public\avi</Filter>
+    </ClInclude>
+    <ClInclude Include="..\game\client\hud.h">
+      <Filter>sdk\game\client</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
