--- a/r5dev/vproj/dedicated.vcxproj
+++ b/r5dev/vproj/dedicated.vcxproj
@@ -131,6 +131,7 @@
     <ClInclude Include="..\common\opcodes.h" />
     <ClInclude Include="..\common\protocol.h" />
     <ClInclude Include="..\common\pseudodefs.h" />
+    <ClInclude Include="..\common\qlimits.h" />
     <ClInclude Include="..\common\sdkdefs.h" />
     <ClInclude Include="..\common\x86defs.h" />
     <ClInclude Include="..\core\assert.h" />
@@ -139,6 +140,8 @@
     <ClInclude Include="..\core\r5dev.h" />
     <ClInclude Include="..\core\stdafx.h" />
     <ClInclude Include="..\core\termutil.h" />
+    <ClInclude Include="..\datacache\imdlcache.h" />
+    <ClInclude Include="..\datacache\mdlcache.h" />
     <ClInclude Include="..\ebisusdk\EbisuSDK.h" />
     <ClInclude Include="..\engine\baseclient.h" />
     <ClInclude Include="..\engine\baseserver.h" />
@@ -146,6 +149,7 @@
     <ClInclude Include="..\engine\cmodel_bsp.h" />
     <ClInclude Include="..\engine\common.h" />
     <ClInclude Include="..\engine\gl_matsysiface.h" />
+    <ClInclude Include="..\engine\gl_model_private.h" />
     <ClInclude Include="..\engine\host.h" />
     <ClInclude Include="..\engine\host_cmd.h" />
     <ClInclude Include="..\engine\host_state.h" />
@@ -187,6 +191,7 @@
     <ClInclude Include="..\networksystem\sm_protocol.h" />
     <ClInclude Include="..\protoc\cl_rcon.pb.h" />
     <ClInclude Include="..\protoc\sv_rcon.pb.h" />
+    <ClInclude Include="..\public\include\const.h" />
     <ClInclude Include="..\public\include\edict.h" />
     <ClInclude Include="..\public\include\globalvars_base.h" />
     <ClInclude Include="..\public\include\inetchannel.h" />
@@ -195,7 +200,9 @@
     <ClInclude Include="..\public\include\binstream.h" />
     <ClInclude Include="..\public\include\httplib.h" />
     <ClInclude Include="..\public\include\json.hpp" />
+    <ClInclude Include="..\public\include\model_types.h" />
     <ClInclude Include="..\public\include\module.h" />
+    <ClInclude Include="..\public\include\studio.h" />
     <ClInclude Include="..\public\include\utility.h" />
     <ClInclude Include="..\rtech\rtech_utils.h" />
     <ClInclude Include="..\rtech\rtech_game.h" />
@@ -375,6 +382,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="..\core\termutil.cpp" />
+    <ClCompile Include="..\datacache\mdlcache.cpp" />
     <ClCompile Include="..\ebisusdk\EbisuSDK.cpp" />
     <ClCompile Include="..\engine\baseclient.cpp" />
     <ClCompile Include="..\engine\baseserver.cpp" />
