--- a/r5dev/vproj/gamesdk.vcxproj
+++ b/r5dev/vproj/gamesdk.vcxproj
@@ -24,6 +24,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="..\core\termutil.cpp" />
+    <ClCompile Include="..\datacache\mdlcache.cpp" />
     <ClCompile Include="..\ebisusdk\EbisuSDK.cpp" />
     <ClCompile Include="..\engine\baseclient.cpp" />
     <ClCompile Include="..\engine\baseclientstate.cpp" />
@@ -47,6 +48,7 @@
     <ClCompile Include="..\filesystem\filesystem.cpp" />
     <ClCompile Include="..\gameui\IConsole.cpp" />
     <ClCompile Include="..\gameui\IBrowser.cpp" />
+    <ClCompile Include="..\game\client\spritemodel.cpp" />
     <ClCompile Include="..\game\server\ai_network.cpp" />
     <ClCompile Include="..\game\server\ai_networkmanager.cpp" />
     <ClCompile Include="..\game\server\ai_utility.cpp" />
@@ -127,6 +129,7 @@
     <ClInclude Include="..\common\opcodes.h" />
     <ClInclude Include="..\common\protocol.h" />
     <ClInclude Include="..\common\pseudodefs.h" />
+    <ClInclude Include="..\common\qlimits.h" />
     <ClInclude Include="..\common\sdkdefs.h" />
     <ClInclude Include="..\common\x86defs.h" />
     <ClInclude Include="..\core\assert.h" />
@@ -135,6 +138,8 @@
     <ClInclude Include="..\core\r5dev.h" />
     <ClInclude Include="..\core\stdafx.h" />
     <ClInclude Include="..\core\termutil.h" />
+    <ClInclude Include="..\datacache\imdlcache.h" />
+    <ClInclude Include="..\datacache\mdlcache.h" />
     <ClInclude Include="..\ebisusdk\EbisuSDK.h" />
     <ClInclude Include="..\engine\baseclient.h" />
     <ClInclude Include="..\engine\baseclientstate.h" />
@@ -145,6 +150,7 @@
     <ClInclude Include="..\engine\common.h" />
     <ClInclude Include="..\engine\debugoverlay.h" />
     <ClInclude Include="..\engine\gl_matsysiface.h" />
+    <ClInclude Include="..\engine\gl_model_private.h" />
     <ClInclude Include="..\engine\gl_screen.h" />
     <ClInclude Include="..\engine\host.h" />
     <ClInclude Include="..\engine\host_cmd.h" />
@@ -163,6 +169,8 @@
     <ClInclude Include="..\gameui\IConsole.h" />
     <ClInclude Include="..\gameui\IBrowser.h" />
     <ClInclude Include="..\game\client\c_baseentity.h" />
+    <ClInclude Include="..\game\client\enginesprite.h" />
+    <ClInclude Include="..\game\client\hud.h" />
     <ClInclude Include="..\game\server\ai_network.h" />
     <ClInclude Include="..\game\server\ai_networkmanager.h" />
     <ClInclude Include="..\game\server\ai_node.h" />
@@ -192,6 +200,9 @@
     <ClInclude Include="..\networksystem\sm_protocol.h" />
     <ClInclude Include="..\protoc\cl_rcon.pb.h" />
     <ClInclude Include="..\protoc\sv_rcon.pb.h" />
+    <ClInclude Include="..\public\avi\iavi.h" />
+    <ClInclude Include="..\public\avi\ibik.h" />
+    <ClInclude Include="..\public\include\const.h" />
     <ClInclude Include="..\public\include\edict.h" />
     <ClInclude Include="..\public\include\globalvars_base.h" />
     <ClInclude Include="..\public\include\inetchannel.h" />
@@ -200,8 +211,10 @@
     <ClInclude Include="..\public\include\binstream.h" />
     <ClInclude Include="..\public\include\httplib.h" />
     <ClInclude Include="..\public\include\json.hpp" />
+    <ClInclude Include="..\public\include\model_types.h" />
     <ClInclude Include="..\public\include\module.h" />
     <ClInclude Include="..\public\include\stb_image.h" />
+    <ClInclude Include="..\public\include\studio.h" />
     <ClInclude Include="..\public\include\utility.h" />
     <ClInclude Include="..\core\resource.h" />
     <ClInclude Include="..\rtech\rtech_utils.h" />
