--- a/r5dev/vproj/clientsdk.vcxproj
+++ b/r5dev/vproj/clientsdk.vcxproj
@@ -357,6 +357,7 @@
     <ClInclude Include="..\tier0\interface.h" />
     <ClInclude Include="..\tier0\jobthread.h" />
     <ClInclude Include="..\tier0\platform.h" />
+    <ClInclude Include="..\tier0\threadtools.h" />
     <ClInclude Include="..\tier0\tslist.h" />
     <ClInclude Include="..\tier1\bitbuf.h" />
     <ClInclude Include="..\tier1\cmd.h" />
